--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                class="w-full px-4 py-3 rounded-xl border border-slate-200 focus-ring text-base" />
         <button id="clear" class="px-3 py-3 rounded-xl bg-white border border-slate-200 hover:bg-slate-50 active:scale-[.98] transition" title="ล้างค่า">ล้าง</button>
         <button id="scan" class="px-3 py-3 rounded-xl bg-white border border-slate-200 hover:bg-slate-50 active:scale-[.98] transition" title="สแกนบาร์โค้ด">สแกน</button>
-        <button id="btn"  class="px-4 py-3 rounded-xl bg-black text-white hover:opacity-90 active:scale-[.98] transition shine">ค้นหา</button>
+        <button id="btn"class="inline-flex items-center justify-center h-12 px-6 rounded-xl bg-black text-white text-base font-semibold leading-none text-center hover:opacity-90 active:scale-[.98] transition shine">ค้นหา</button>
       </div>
       <div class="mt-2 text-xs text-slate-500">รองรับ Handheld/Tablet, การยิงบาร์โค้ด และกล้อง (ต้องเปิดผ่าน HTTPS)</div>
     </div>
@@ -298,3 +298,4 @@
   </script>
 </body>
 </html>
+
