--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Product Lookup – CODE Search</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Fallback สำหรับสแกนบนเครื่องที่ไม่มี BarcodeDetector -->
+
+  <!-- Fallback สำหรับ 1D barcode -->
   <script defer src="https://unpkg.com/quagga@0.12.1/dist/quagga.min.js"></script>
+  <!-- Fallback สำหรับ QR บน iPhone -->
+  <script defer src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
+
   <style>
     .glass { background: rgba(255,255,255,0.65); backdrop-filter: blur(10px); }
     .focus-ring:focus { outline: none; box-shadow: 0 0 0 4px rgba(37,99,235,0.25); }
@@ -28,10 +32,15 @@
                placeholder="พิมพ์/สแกน CODE แล้วกด Enter หรือปุ่มค้นหา"
                class="w-full px-4 py-3 rounded-xl border border-slate-200 focus-ring text-base" />
         <button id="clear" class="px-3 py-3 rounded-xl bg-white border border-slate-200 hover:bg-slate-50 active:scale-[.98] transition" title="ล้างค่า">ล้าง</button>
-        <button id="scan" class="px-3 py-3 rounded-xl bg-white border border-slate-200 hover:bg-slate-50 active:scale-[.98] transition" title="สแกนบาร์โค้ด">สแกน</button>
-        <button id="btn"class="inline-flex items-center justify-center h-12 px-6 rounded-xl bg-black text-white text-base font-semibold leading-none text-center hover:opacity-90 active:scale-[.98] transition shine">ค้นหา</button>
+        <button id="scan"  class="px-3 py-3 rounded-xl bg-white border border-slate-200 hover:bg-slate-50 active:scale-[.98] transition" title="สแกนบาร์โค้ด">สแกน</button>
+        <button id="btn"
+          class="inline-flex items-center justify-center h-12 px-6 rounded-xl bg-black text-white
+                 text-base font-semibold leading-none text-center hover:opacity-90 active:scale-[.98]
+                 transition shine">ค้นหา</button>
       </div>
-      <div class="mt-2 text-xs text-slate-500">รองรับ Handheld/Tablet, การยิงบาร์โค้ด และกล้อง (ต้องเปิดผ่าน HTTPS)</div>
+      <div class="mt-2 text-xs text-slate-500">
+        รองรับ Handheld/Tablet, การยิงบาร์โค้ด และกล้อง (ต้องเปิดผ่าน HTTPS และใน Safari โดยตรง ไม่ใช่ in-app browser)
+      </div>
     </div>
 
     <section id="result" class="mt-6"></section>
@@ -52,9 +61,10 @@
     <div class="bg-white rounded-2xl w-full max-w-md p-4 relative">
       <button id="closeScan" class="absolute right-3 top-3 text-slate-400">✕</button>
       <div class="mb-2 text-sm text-slate-600">เล็งกล้องไปที่บาร์โค้ด</div>
-      <video id="video" autoplay playsinline class="w-full rounded-lg bg-black"></video>
+      <!-- สำคัญมากสำหรับ iPhone: muted + playsinline -->
+      <video id="video" autoplay playsinline muted class="w-full rounded-lg bg-black"></video>
       <canvas id="canvas" class="hidden"></canvas>
-      <div class="text-xs text-slate-500 mt-2">ถ้ากล้องไม่รองรับ จะใช้ QuaggaJS อัตโนมัติ</div>
+      <div class="text-xs text-slate-500 mt-2">ถ้าอุปกรณ์ไม่รองรับ จะใช้ jsQR/Quagga ให้อัตโนมัติ</div>
     </div>
   </div>
 
@@ -63,20 +73,13 @@
 
     // ===== Utils =====
     function digitsOnly(s){ return String(s ?? '').replace(/\D+/g,''); }
-    function escapeHtml(s) {
-      return String(s)
-        .replace(/&/g, '&amp;').replace(/</g, '&lt;')
-        .replace(/>/g, '&gt;').replace(/"/g, '&quot;')
-        .replace(/'/g, '&#39;');
-    }
+    function escapeHtml(s){ return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;').replace(/'/g,'&#39;'); }
     function escapeAttr(s){ return String(s).replace(/'/g,'&#39;'); }
 
-    // ===== ตัด "ตำแหน่งที่ 5–11 จากซ้าย" (1-based) แบบตายตัว =====
-    // 1) เก็บเฉพาะตัวเลข  2) ถ้ายาว >= 11 ให้คืน s[4..10]  (รวม 7 หลัก)
+    // ตัด "ตำแหน่งที่ 5–11 จากซ้าย" (1-based) แบบตายตัวเสมอ (และเก็บเฉพาะตัวเลขก่อน)
     function normalizeCode(raw) {
       const s = digitsOnly(raw).trim();
-      if (s.length >= 11) return s.slice(4, 11);
-      return s;
+      return (s.length >= 11) ? s.slice(4, 11) : s;
     }
 
     // ===== Percent Formatter =====
@@ -91,11 +94,10 @@
       return (Number.isInteger(r) ? r.toString() : r.toFixed(2)) + '%';
     }
 
-    // ===== Local Storage (History: CODE + DESCRIPTION) =====
+    // ===== History =====
     const LS_KEY_HIST = 'lookup_history_v2';
     const getHist = () => JSON.parse(localStorage.getItem(LS_KEY_HIST) || '[]');
     const setHist = (arr) => localStorage.setItem(LS_KEY_HIST, JSON.stringify(arr.slice(0,50)));
-
     function renderHist(){
       const ul = document.getElementById('histList');
       const hist = getHist();
@@ -130,7 +132,7 @@
           </div>
         </div>`;
     }
-    function showLoading() {
+    function showLoading(){
       document.getElementById('result').innerHTML = `
         <div class="glass rounded-2xl p-5 shadow-lg border border-white/50 animate-pulse">
           <div class="h-4 bg-slate-200 rounded w-24 mb-4"></div>
@@ -142,15 +144,15 @@
           </div>
         </div>`;
     }
-    function showEmpty(msg='ไม่พบข้อมูล หรือ CODE นี้ไม่ร่วม PRO Clearance') {
+    function showEmpty(msg='ไม่พบข้อมูล หรือ CODE นี้ไม่ร่วม PRO Clearance'){
       document.getElementById('result').innerHTML = `<div class="text-center text-slate-500">${msg}</div>`;
     }
 
-    async function search(q) {
+    async function search(q){
       const code = normalizeCode(q);
       if (!code) { showEmpty('กรุณาพิมพ์ CODE'); return; }
       showLoading();
-      try {
+      try{
         const url = new URL(API_URL);
         url.searchParams.set('q', code);
         const res = await fetch(url.toString(), { cache: 'no-store' });
@@ -162,16 +164,16 @@
         } else {
           showEmpty();
         }
-      } catch (e) {
+      } catch(e){
         console.error(e);
         showEmpty('เกิดข้อผิดพลาดในการดึงข้อมูล');
       }
     }
 
     // ===== Elements & helpers =====
-    const qInput = document.getElementById('q');
-    const btnSearch = document.getElementById('btn');
-    const btnClear  = document.getElementById('clear');
+    const qInput   = document.getElementById('q');
+    const btnSearch= document.getElementById('btn');
+    const btnClear = document.getElementById('clear');
 
     function clearTextbox(focusBack=true, alsoResult=false){
       qInput.value = '';
@@ -189,19 +191,17 @@
     btnSearch.addEventListener('click', () => search(qInput.value));
     btnClear.addEventListener('click', () => clearTextbox(true, false));
 
-    // ----- Keyboard wedge handling (debounced) -----
+    // keyboard wedge (debounced)
     let scanTimer = null;
-    const SCAN_IDLE_MS = 120; // รอให้เครื่องพิมพ์จบก่อนค่อยตัด
+    const SCAN_IDLE_MS = 120;
     qInput.addEventListener('input', () => {
       if (scanTimer) clearTimeout(scanTimer);
       scanTimer = setTimeout(() => {
         const code = normalizeCode(qInput.value);
-        // ใส่ค่าใหม่ที่ถูกตัด แล้วค้นหาอัตโนมัติถ้าเป็น 7 หลัก
         qInput.value = code;
         if (code.length === 7) search(code);
       }, SCAN_IDLE_MS);
     });
-    // รองรับเครื่องที่ยิงแล้วส่ง Enter ต่อท้าย
     qInput.addEventListener('keydown', (e) => {
       if (e.key === 'Enter') {
         e.preventDefault();
@@ -216,70 +216,131 @@
       renderHist();
     });
 
-    // ===== Barcode Scan (กล้อง/Quagga) =====
-    const scanBtn = document.getElementById('scan');
-    const overlay = document.getElementById('scanOverlay');
+    // ===== Scanner (iPhone-safe) =====
+    const scanBtn   = document.getElementById('scan');
+    const overlay   = document.getElementById('scanOverlay');
     const closeScan = document.getElementById('closeScan');
-    const video = document.getElementById('video');
+    const video     = document.getElementById('video');
+    const canvas    = document.getElementById('canvas');
+    const ctx       = canvas.getContext('2d', { willReadFrequently: true });
+
     let stream = null;
     let quaggaStarted = false;
+    let jsqrActive = false;
+
+    function onDetectedRaw(raw){
+      clearTextbox(false);
+      const code = normalizeCode(raw);
+      stopScan();
+      qInput.value = code;
+      if (code.length === 7) search(code);
+    }
 
     async function startNativeDetector(){
       const BarcodeDetectorClass = window.BarcodeDetector;
-      if (!BarcodeDetectorClass) return false;
+      if (!BarcodeDetectorClass) return false; // iPhone ส่วนใหญ่จะมาทางนี้
+
       const formats = ['ean_13','ean_8','code_128','code_39','upc_e','upc_a','itf','qr_code'];
       try {
-        stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
+        stream = await navigator.mediaDevices.getUserMedia({
+          audio: false,
+          video: { facingMode: { ideal: 'environment' } }
+        });
         video.srcObject = stream;
-        video.play();
+        video.muted = true;
+        await video.play();
+
         const detector = new BarcodeDetectorClass({ formats });
 
         const scan = async () => {
           if (overlay.classList.contains('hidden')) return;
+
           try {
-            const bitmap = await createImageBitmap(video);
-            const codes = await detector.detect(bitmap);
-            if (codes && codes.length) {
-              const raw = codes[0]?.rawValue ?? '';
-              clearTextbox(false);
-              const code = normalizeCode(raw);
-              stopScan();
-              qInput.value = code;
-              if (code.length === 7) search(code);
+            // บางเบราว์เซอร์ไม่มี createImageBitmap → ใช้ canvas แทน
+            let codes = [];
+            if ('createImageBitmap' in window) {
+              const bmp = await createImageBitmap(video);
+              codes = await detector.detect(bmp);
+            } else {
+              const w = video.videoWidth, h = video.videoHeight;
+              if (w && h) {
+                canvas.width = w; canvas.height = h;
+                ctx.drawImage(video, 0, 0, w, h);
+                codes = await detector.detect(canvas);
+              }
             }
-          } catch (e) {/* ignore transient frame errors */}
+            if (codes && codes.length) {
+              const raw = codes[0]?.rawValue || '';
+              if (raw) return onDetectedRaw(raw);
+            }
+          } catch(e){ /* ignore frame errors */ }
+
           requestAnimationFrame(scan);
         };
         requestAnimationFrame(scan);
         return true;
-      } catch { return false; }
+      } catch(e){
+        console.warn('Native detector failed:', e);
+        return false;
+      }
     }
 
-    function startQuagga(){
+    async function startJsQR(){ // ใช้ได้ดีบน iPhone/Safari
+      if (typeof jsQR === 'undefined') return false;
+      try{
+        stream = await navigator.mediaDevices.getUserMedia({
+          audio: false,
+          video: { facingMode: { ideal: 'environment' } }
+        });
+        video.srcObject = stream;
+        video.muted = true;
+        await video.play();
+
+        jsqrActive = true;
+
+        const scan = () => {
+          if (!jsqrActive || overlay.classList.contains('hidden')) return;
+
+          const w = video.videoWidth, h = video.videoHeight;
+          if (!w || !h) { requestAnimationFrame(scan); return; }
+
+          canvas.width = w; canvas.height = h;
+          ctx.drawImage(video, 0, 0, w, h);
+          const imageData = ctx.getImageData(0, 0, w, h);
+          const result = jsQR(imageData.data, w, h, { inversionAttempts: "dontInvert" });
+          if (result && result.data) {
+            onDetectedRaw(result.data);
+            return;
+          }
+          requestAnimationFrame(scan);
+        };
+        requestAnimationFrame(scan);
+        return true;
+      } catch(e){
+        console.warn('jsQR failed:', e);
+        return false;
+      }
+    }
+
+    function startQuagga(){ // 1D barcode fallback (ไม่รองรับ QR)
       if (!window.Quagga) return false;
       Quagga.init({
         inputStream: { type: 'LiveStream', target: video, constraints: { facingMode: 'environment' } },
-        decoder: { readers: ['ean_reader','ean_8_reader','code_128_reader','code_39_reader','upc_reader','upc_e_reader','itf_reader','qr_reader'] }
+        decoder: { readers: ['ean_reader','ean_8_reader','code_128_reader','code_39_reader','upc_reader','upc_e_reader','itf_reader'] }
       }, function(err){
         if (err) { console.error(err); return; }
-        Quagga.start();
-        quaggaStarted = true;
+        Quagga.start(); quaggaStarted = true;
       });
       Quagga.onDetected(function(result){
         const raw = result?.codeResult?.code ?? '';
-        clearTextbox(false);
-        const code = normalizeCode(raw);
-        if (code) {
-          stopScan();
-          qInput.value = code;
-          if (code.length === 7) search(code);
-        }
+        if (raw) onDetectedRaw(raw);
       });
       return true;
     }
 
     function stopScan(){
       overlay.classList.add('hidden');
+      jsqrActive = false;
       if (quaggaStarted && window.Quagga) { Quagga.stop(); quaggaStarted = false; }
       if (stream) { stream.getTracks().forEach(t => t.stop()); stream = null; }
       video.srcObject = null;
@@ -288,8 +349,13 @@
     scanBtn.addEventListener('click', async () => {
       clearTextbox(true, false); // เริ่มสแกนใหม่ → เคลียร์ช่องก่อน
       overlay.classList.remove('hidden');
-      const ok = await startNativeDetector();
-      if (!ok) startQuagga();
+
+      // ลำดับ fallback: Native → jsQR (iPhone) → Quagga (1D)
+      const okNative = await startNativeDetector();
+      if (!okNative) {
+        const okJs = await startJsQR();
+        if (!okJs) startQuagga();
+      }
     });
     closeScan.addEventListener('click', stopScan);
 
@@ -298,4 +364,3 @@
   </script>
 </body>
 </html>
-
