--- a/index.html
+++ b/index.html
@@ -143,11 +143,13 @@
           </div>
         </div>`;
     }
+    // โค้ดส่วนอื่นๆ ...
     function showLoading(){
       document.getElementById('result').innerHTML = `
         <div class="glass rounded-2xl p-5 shadow-lg border border-white/50 animate-pulse">
           <div class="h-4 bg-slate-200 rounded w-24 mb-4"></div>
           <div class="space-y-3">
+            <div class="h-6 bg-slate-200 rounded"></div>
             <div class="h-6 bg-slate-200 rounded"></div>
             <div class="h-6 bg-slate-200 rounded"></div>
             <div class="h-6 bg-slate-200 rounded"></div>
@@ -375,5 +377,6 @@
   </script>
 </body>
 </html>
+
 
 
